<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">码车惠</string>
    <string name="action_settings">Settings</string>
    
    <string name="mineorder_all">全部</string>
    <string name="mineorder_waitpay">待付款</string>
    <string name="mineorder_end">已完成</string>
    <string name="mineorder_backorder">退款订单</string>
    
    
    <string name="home">首页</string>
    <string name="find">发现</string>
    <string name="money">钱包</string>
    <string name="mine">我的</string>
    <string name="pub_ui_mine_txt">个人中心</string>
    <string name="pub_ui_find_title">爱车圈</string>
    <string name="pub_ui_mine_order_txt">我的订单</string>
    <string name="pub_ui_mine_vehicle">我的车辆</string>
    <string name="pub_ui_mine_vehicleCard">我的码车卡</string>
    <string name="pub_ui_mine_setter">设置</string>
    <string name="hint_txt">查找商户、服务</string>
    <string name="login_regtisger">登录</string>
    <string name="login_other">第三方合作账户登陆</string>
    <!-- 下拉刷新，上拉加载更多 -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <!-- 首页的布局的9个按钮 -->
    <string name="pub_ui_fragment_home_clear">洗车</string>
    <string name="pub_ui_fragment_home_driver">代驾</string>
    <string name="pub_ui_fragment_home_stop">停车</string>
    <string name="pub_ui_fragment_home_repair">维修保养</string>
    <string name="pub_ui_fragment_home_comse">汽车美容</string>
    <string name="pub_ui_fragment_home_comseline">加油</string>
    <string name="pub_ui_fragment_home_qlleag">违章查询</string>
    <string name="pub_ui_fragment_home_autoinsure">车险办理</string>
    <string name="pub_ui_fragment_home_active">积分商城</string>
    <string name="qr_register">注册</string>
    <string name="qr_forget">忘记密码</string>
    <string name="qr_forget_title">找回密码</string>
    <string name="register_tip">我已阅读并同意</string>
    <string name="stop_yanzhengma">获取短信验证码</string>
    <string name="my_data">我的资料</string>
    <string name="nickname">昵称</string>
    <string name="_sex">性别</string>
    <string name="quit">退出登录</string>
    <string name="stop_map_txt">停车</string>
    <string name="stop_map_bottom_txt">附近的停车场</string>
    <string name="stop_map_accress_net_fail">访问网络失败！</string>
    <string name="stop_map_search">搜索</string>
    <string name="wash_driver">洗车</string>
    <string name="wash_cosme">美容</string>
    <string name="wash_repaire">维修保养</string>
    <string name="wash_come">加油</string>
<string name="search_address">请输入地理位置</string>
<string name="search_phone">请输入手机号码</string>
    <!-- WashService中的文字 -->
    <string name="toast_netfail">访问网络失败</string>
    <string name="toast_jsonerror">JSON解析异常！</string>
    <string-array name="WashType">
        <item>洗车</item>
        <item>美容</item>
        <item>维修保养</item>
        <item>加油</item>
    </string-array>
  
    <string-array name="WashSreening">
        <item>优惠商户</item>
        <item>免预约</item>
    </string-array>
    <string-array name="WashNear">
 
        <item>市中区</item>
        <item>历下区</item>
        <item>历城区</item>
        <item>槐荫区</item>
        <item>天桥区</item>
    </string-array>
    
     <string name="enter">这是SDK_Sample的入口界面</string>
         <string name="reg">将该app注册到微信</string>
    <string name="goto_send">跳转到发消息界面</string>
    <string name="launch_wx">启动微信</string>
    <string name="check_timeline_supported">检查是否支持发送到朋友圈</string>
      <string name="app_back">返回</string>
    <string name="app_ok">确定</string>
    <string name="app_cancel">取消</string>
    <string name="app_continue">继续</string>
    <string name="app_tip">提示</string>
    <string name="app_send">发送</string>
    <string name="app_set">设置</string>
    <string name="app_save">保存</string>
    <string name="app_delete">删除</string>
    <string name="app_nextstep">下一步</string>
    <string name="app_prevstep">上一步</string>
    <string name="app_finish">完成</string>
    <string name="app_find">查找</string>
    <string name="app_edit">编辑</string>

    <!-- applet -->
    <string name="applet_secimg_title">填写验证码</string>
    <string name="applet_secimg_change">换一张图片</string>
    <string name="applet_seccode_tip">验证码不能为空</string>
    <string name="applet_seccode_fail_tip">验证码错误，请重新输入</string>

    <!-- verify -->
    <string name="verify_password_null_tip">密码不能为空，请输入密码</string>

    <!-- format -->
    <string name="fmt_date">M月d日</string>
    <string name="fmt_longdate">yyyy年M月d日</string>
    <string name="fmt_datetime" formatted="false">M月d日 %skk:mm</string>
    <string name="fmt_patime">kk:mm</string>
    <string name="fmt_longtime" formatted="false">yyyy年M月d日 %skk:mm</string>
    <string name="fmt_in60min" formatted="false">%d分钟前</string>
    <string name="fmt_justnow">1分钟内</string>
    <string name="fmt_dawn">凌晨</string>
    <string name="fmt_morning">早上</string>
    <string name="fmt_noon">中午</string>
    <string name="fmt_afternoon">下午</string>
    <string name="fmt_evening">晚上</string>
    <string name="fmt_pre_yesterday">昨天</string>
    <string name="fmt_iap_err" formatted="false">网络连接不可用，请稍候重试</string>
    
    <string name="hello">Hello World, SDKSampleActivity!</string>
  
	<string name="app_share">分享</string>
    
  
   
    <string name="goto_pay">跳转到支付界面</string>
    <string name="goto_fav">跳转到收藏界面</string>
   
    
    <string name="send_to_wx_title">发送到微信</string>
	<string name="get_from_wx_title">从微信接收</string>
	<string name="show_from_wx_title">显示微信请求的消息</string>
	<string name="pay_by_wx_title">通过微信支付</string>
	<string name="prepay_id_wx_text">prepayid</string>
	<string name="invoke_ip">invoke_ip</string>
	<string name="prepay_id_value">wx20141126110244e3e4bc4e580111072793</string>
	
	
	<string name="errcode_success">发送成功</string>
	<string name="errcode_cancel">发送取消</string>
	<string name="errcode_deny">发送被拒绝</string>
	<string name="errcode_unknown">发送返回</string>
	
	<string name="launch_from_wx">Launch From Weixin</string>
	
    <!-- WXMediaMessage -->
	<string name="input_openid">输入openid</string>
	<string name="input_scope">输入scope</string>
	
	<string name="send">发送到微信</string>
	<string name="receive">从微信接收</string>
	
	<string name="is_timeline">是否分享到朋友圈</string>
	<string name="send_text">发送文本</string>
	<string name="send_text_default">这段文字发送自微信SDK示例程序</string>
	
	<string name="send_img">发送图片</string>
	<string-array name="send_img_item">
        <item>发送图片的二进制数据</item>
        <item>发送图片的本地路径</item>
        <item>发送图片的URL</item>
    </string-array>
	<string name="send_img_file_not_exist">文件不存在</string>
	
	<string name="send_file">发送文件</string>
	<string-array name="send_file_item">
        <item>发送文件的二进制数据</item>
        <item>发送文件的本地路径</item>
    </string-array>
    <string name="send_file_file_not_exist">文件不存在</string>
	
	<string name="send_pic">发送照片</string>
	
	<string name="send_music">发送音乐</string>
	<string-array name="send_music_item">
	    <item>发送音乐url</item>
	    <item>发送低带宽音乐url</item>
	</string-array>

	<string name="send_video">发送视频</string>
	<string-array name="send_video_item">
	    <item>发送视频url</item>
	    <item>发送低带宽视频url</item>
	</string-array>
	
	<string name="send_webpage">发送网页</string>
	<string-array name="send_webpage_item">
	    <item>发送网页url</item>
	</string-array>

	<string name="send_appdata">发送app消息</string>
	<string-array name="send_appdata_item">
	    <item>发送app文件本地路径</item>
	    <item>发送app二进制数据</item>
	    <item>发送无附件的app</item>
	</string-array>
	
	<string name="send_emoji">发送表情消息</string>
	<string-array name="send_emoji_item">
	    <item>发送表情本地路径</item>
	    <item>发送表情二进制数据</item>
	</string-array>
	
	<string-array name="send_emoji_item_format">
	    <item>发送GIF图片</item>
	    <item>发送非GIF图片</item>
	</string-array>
	
	<!-- GetFromWXActivity -->
    <string name="share_text_to_weixin">回应文本到微信</string>
    <string name="share_text_default">这段文字回应自微信SDK示例程序</string>
    <string name="share_url_to_weixin">回应URL到微信</string>
    <string name="share_pic_to_weixin">回应图片到微信</string>
    <string name="share_music_to_weixin">回应音乐到微信</string>
    <string name="share_video_to_weixin">回应视频到微信</string>
    <string name="share_appdata_to_weixin">回应app消息到微信</string>
    
    <string name="register_as_weixin_app_sender">注册微信事件发送器</string>
    <string name="get_token_from_weixin">获取微信访问Token</string>
    <string name="unregister_from_weixin">从微信反注册</string>
    
    <string name="show_from_wx_tip">这个界面用于显示微信向第三方app请求显示的信息</string>
    
	<!-- PayActivity -->
	<string name="unifiedorder_v3_wx">APP支付生成预支付订单</string>
	<string name="pay__pre_by_wxap">生成APP微信支付参数</string>

	<string name="pay_by_wxap">调起微信支付</string>
	<string name="check_pay">检查微信版本是否支持支付</string>
	<string name="input_reqkey">输入reqkey</string>
	<string name="input_package_value">输入package value</string>
	<string name="input_sign">输入sign</string>
	<string name="getting_access_token">正在获取access token...</string>
	<string name="get_access_token_succ">获取access token成功</string>
	<string name="get_access_token_fail" formatted="false">获取access token失败，原因%s</string>
	<string name="getting_prepayid">正在获取预支付订单...</string>
	<string name="paying">支付中</string>
	<string name="get_prepayid_succ">获取prepayid成功</string>
	<string name="get_prepayid_fail" formatted="false">获取prepayid失败，原因%s</string>
    
	<!-- WXPayEntryActivity -->
	<string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
	<string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
	
	<!-- BC-test -->
	<string name="bc_pay" formatted="false">微信支付</string>
	<string name="bc_pay_wx_title">微信支付</string>
	<string name="bc_pay_goto_wx">打开微信支付</string>

</resources>