<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/pub_ui_head_bg"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pub_ui_mine_txt"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/wash_driver" />
    <!-- 顶部的头像的部分 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="13dp"
        android:layout_weight="9.0"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/head_ll_mine_fragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="3.5"
            android:background="@color/pub_ui_find_item"
            android:gravity="center|center_horizontal"
            android:orientation="vertical" >

            <com.cac.machehui.client.view.RoundRectImage
                android:id="@+id/pub_ui_mine_head"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/person_09" />

            <TextView
                android:id="@+id/pub_ui_mine_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/login_regtisger"
                android:textSize="20sp" />
        </LinearLayout>
        <!-- 中间部分的4个横条 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6.5"
            android:orientation="vertical" >

            <!-- 第一个横条 -->

            <RelativeLayout
                android:id="@+id/mimeorder"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1px"
                android:background="#ffffff" >

                <ImageButton
                    android:id="@+id/imageButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/person_10" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/imageButton1"
                    android:text="我的订单"
                    android:textSize="18sp" />
            </RelativeLayout>

            <!-- 第二个横条 -->

            <RelativeLayout
                android:id="@+id/mine_driver"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="13dp"
                android:background="#ffffff" >

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/person_11" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/imageButton2"
                    android:text="@string/pub_ui_mine_vehicle"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/textView2"
                    android:text="首次绑定车辆可获赠50积分！"
                    android:textColor="#ff4807" />
            </RelativeLayout>

            <!-- 第三个横条  码车卡功能一期不做 -->

            <RelativeLayout
                android:id="@+id/mineMacheka"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="13dp"
                android:background="#ffffff"
                android:visibility="gone" >

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/person_12" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/imageButton3"
                    android:text="@string/pub_ui_mine_vehicleCard"
                    android:textSize="18sp" />
            </RelativeLayout>

            <!-- 第四个横条 -->

            <RelativeLayout
                android:id="@+id/mainsetting"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="13dp"
                android:background="#ffffff" >

                <ImageButton
                    android:id="@+id/imageButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/person_13" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/imageButton4"
                    android:text="@string/pub_ui_mine_setter"
                    android:textSize="18sp" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>