<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/pub_ui_head_bg"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_data"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout> 
    <!-- 顶部的头像的部分 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="我的头像" />

        <ImageButton
            android:id="@+id/pub_ui_mine_head"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="150dp"
            android:background="@drawable/person_07"
            android:text="头像" />

       <ImageButton 
           android:id="@+id/ib_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/person_08" />
    </LinearLayout>

    <!-- 中间部分的4个横条 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="2dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <!-- 第一个横条 -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/nickname" />

        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:text="码车惠012345" />

        <ImageButton
            android:id="@+id/ib_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/person_08" />
    </LinearLayout>

    <!-- 第二个横条 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="2dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/_sex" />

        <TextView
            android:id="@+id/tv_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="225dp"
            android:text="男" />

        <ImageButton
            android:id="@+id/ib_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/person_08" />
    </LinearLayout>
    <!-- 第三个横条 -->

    <LinearLayout
       android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="2dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="会员身份" />

        <TextView
            android:id="@+id/tv_vip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="153dp"
            android:text="普通会员" />

        <ImageButton
            android:id="@+id/ib_vip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/person_08" />
    </LinearLayout>
    <!-- 第四个横条 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="手机号码" />

        <TextView
            android:id="@+id/tv_telnumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:text="155****4678" />

        <ImageButton
            android:id="@+id/ib_telnumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/person_08" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="2dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="密码修改" />
        <ImageButton
            android:id="@+id/ib_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="220dp"
            android:background="@drawable/person_08" />
    </LinearLayout>
    
    <Button 
        android:id="@+id/bt_quit"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="60dp"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:background="@drawable/person_06"
        android:text="@string/quit"
        android:textColor="@color/white"/>

   

</LinearLayout>